--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="pages/discografia.html">DISCOGRAFIA</a>
                         </li>
                         <li class="nav-item li-header">
-                            <a class="nav-link" href="https://nicolasloza.github.io/2da-pre-entrega/">TIENDA</a>
+                            <a class="nav-link" href="https://nicolasloza.github.io/2da-pre-entrega/" target="_blank">TIENDA</a>
                         </li>   
                         <li class="nav-item dropdown li-header">
                             <a class="nav-link" href="" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">FECHAS</a>
