--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -24,7 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- JS -->
-    <script defer src="../js/productos.js"></script>
+    <!-- <script defer src="../js/productos.js"></script> -->
     <script defer src="../js/catalogo.js"></script>
 
     <!-- CSS -->
@@ -92,6 +92,7 @@
     </header>
     <!-- Fin header -->
 
+    <!-- Main -->
     <main class="container">
         <div>
         
@@ -99,7 +100,7 @@
             
             <table class="table">
                     <tr>
-                        <th class="img-disco"></th>
+                        <th></th>
                         <th>Título del CD <button id="orden-titulo" ><img src="../multimedia/images/catalogo/chevron.png" alt=""></button></th>
                         <th>Año de lanzamiento <button id="orden-lanzamiento"> <img src="../multimedia/images/catalogo/chevron.png" alt=""></button></th>
                         <th>Precio <button id="orden-precio"><img src="../multimedia/images/catalogo/chevron.png" alt=""></button></th>
@@ -111,10 +112,7 @@
             </table>
         </div>
     </main>
-
-    <script>
-        console.log(productos, 'productos1')
-    </script>
+    <!-- Fin main -->
 
     <!-- Footer -->
     <footer>
