Agrega eventos para orden de secciones

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -101,9 +101,32 @@
             <table class="table">
                     <tr>
                         <th></th>
-                        <th>Título del CD <button id="orden-titulo" ><img src="../multimedia/images/catalogo/chevron.png" alt=""></button></th>
-                        <th>Año de lanzamiento <button id="orden-lanzamiento"> <img src="../multimedia/images/catalogo/chevron.png" alt=""></button></th>
-                        <th>Precio <button id="orden-precio"><img src="../multimedia/images/catalogo/chevron.png" alt=""></button></th>
+                        <th class="titulo">Título del CD 
+                            <button id="orden-titulo-descendente" class="asc-des">
+                                <img class="img-descendente" src="../multimedia/images/catalogo/chevron.png" alt="">
+                            </button>
+                            <button id="orden-titulo-ascendente">
+                                <img class="img-ascendente" src="../multimedia/images/catalogo/chevron2.png" alt="">
+                            </button>
+                        </th>
+                    
+                        <th class="lanzamiento">Año de lanzamiento 
+                            <button id="orden-lanzamiento-descendente" class="asc-des"> 
+                                <img src="../multimedia/images/catalogo/chevron.png" alt="">
+                            </button>
+                            <button id="orden-lanzamiento-ascendente" >
+                                <img class="img-ascendente" src="../multimedia/images/catalogo/chevron2.png" alt="">
+                            </button>
+                        </th>
+                    
+                        <th class="precio">Precio 
+                            <button id="orden-precio-descendente" class="asc-des">
+                                <img src="../multimedia/images/catalogo/chevron.png" alt="">
+                            </button>
+                            <button id="orden-precio-ascendente" >
+                                <img class="img-ascendente" src="../multimedia/images/catalogo/chevron2.png" alt="">
+                            </button>
+                        </th>
                     </tr>
 
                 <tbody id="resultados">
