--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="nav-item li-header li-header">
+                            <a class="nav-link" href="pages/catalogo.html">CATALOGO</a>
+                        </li>
                     </ul>
                 </div>
             </div>
